linked pages and made history pages

--- a/homepage.html
+++ b/homepage.html
@@ -7,9 +7,12 @@
     <body>
         <div>
         <!--heading-->
-        <div>
-        <!--navigation bar    -->
-        </div>
+        <nav class="nav nav-pills">
+                <div class="nav-item"><a href="homepage.html" class="nav-link active">Home</a></div>
+                <div class="nav-item"><a href="resources.html" class="nav-link">Resources</a></div>
+                <div class="nav-item"><a href="history.html" class="nav-link">History</a></div>
+                <div class="nav-item"><a href="donationpage.html" class="nav-link">Donate</a></div>
+            </nav>
         </div>
         <div>
         <!--mission statement-->
