--- a/donationpage.html
+++ b/donationpage.html
@@ -21,6 +21,11 @@
             </nav>
     </div>
     </header>
+    <div class="info">
+        <p>
+            
+        </p>
+    </div>
     <footer>
         copyright
     </footer>
