--- a/donationpage.html
+++ b/donationpage.html
@@ -11,13 +11,13 @@
 <body>
    <header>
      <div class="title-banner">
-                <div class="block fixed round">DONATE</div>
+                <div class="block fixed round">DONATIONS</div>
             </div>
          <nav class="nav nav-pills">
                 <div class="nav-item"><a href="homepage.html" class="nav-link active">Home</a></div>
                 <div class="nav-item"><a href="resources.html" class="nav-link">Resources</a></div>
                 <div class="nav-item"><a href="history.html" class="nav-link">History</a></div>
-                <div class="nav-item"><a href="donationpage.html" class="nav-link">Donate</a></div>
+                <div class="nav-item"><a href="donationpage.html" class="nav-link">Donations</a></div>
             </nav>
     </div>
     </header>
