--- a/homepage.html
+++ b/homepage.html
@@ -24,8 +24,10 @@
                 <div class="nav-item"><a href="donationpage.html" class="nav-link">Donate</a></div>
             </nav>
         </header>
-        <div>
-        <!--mission statement-->
+        <div class="container">
+        <h1> Mission Statement</h1>
+        <p> We aim to create a website that will help 
+            the people in the Undocumented Community.</p>
             
         </div>
         <!--<div> for footer-->
