Forgot a year, added it in.

--- a/history.html
+++ b/history.html
@@ -148,6 +148,11 @@
                     was ended by president Lyndon B Johnson. 
                 </li>
                 <li>
+                    1970: Naturalization Act. Allowed any free white person who had been living 
+                    in the United States for 2 or more years to apply for citizenship. The census 
+                    was created this year. 
+                </li>
+                <li>
                     1986: Simpson-Mazzoli Act. This Act granted amnesty to more than 
                     3 million immigrants living illegally in the United States.
                 </li>
