--- a/resources.html
+++ b/resources.html
@@ -21,7 +21,197 @@
             </nav>
         </header>
         <main>
-            
+            <section class="resource-section">
+                <span class="carousel-title">LAWYERS</span>
+                <div id="lawyers" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
+                    <ol class="carousel-indicators">
+                        <li data-target="#lawyers" data-slide-to="0" class="active"></li>
+                        <li data-target="#lawyers" data-slide-to="1"></li>
+                        <li data-target="#lawyers" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="card">
+                                <img src="https://s3-media0.fl.yelpcdn.com/bphoto/QJ2DEeZRgdab1ZqHp4iISQ/l.jpg" style="padding:5%;" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">CATHOLIC MIGRATION SERVICES</h5>
+                                    <p class="card-text">
+                                        "Catholic Migration Services is focused on "welcoming the stranger in our midst," by being committed to empowering underserved immigrant communities regardless of religion or ethnicity. We provide high quality legal services, education, and advocacy to immigrants to advance equality and social justice in a changing and diverse population." <i style="align-self:flex-end;">- Catholic Migration Services</i>
+                                    </p>
+                                    <div class="collapse multi-law" id="law1">
+                                        <div class="contact-type">
+                                            <strong>Phone:</strong>
+                                            <p>(718) 236-3000 (Brooklyn) / (347) 472-3500 (Queens)</p>
+                                        </div>
+                                        <div class="contact-type">
+                                            <strong>Addresses:</strong>
+                                            <a href="https://goo.gl/maps/FmhdRkce4KqkY6YA9">Brooklyn</p>
+                                            <a href="https://goo.gl/maps/fs3r29AdrcmKY14XA">Queens</p>
+                                        </div>
+                                        <div class="contact-type">
+                                            <div><strong>Website:</strong> <a href="https://catholicmigration.org/">catholicmigration.org</a></div>
+                                        </div>
+                                    </div>
+                                    <a href=".multi-law" class="btn btn-primary" data-toggle="collapse">Contact</a>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="carousel-item">
+                        <div class="card">
+                                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c1/The_Legal_Aid_Society_logo.svg/1200px-The_Legal_Aid_Society_logo.svg.png" style="padding:5%;" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">THE LEGAL AID SOCIETY</h5>
+                                    <p class="card-text">
+                                        "Every day, in every borough, The Legal Aid Society works in courtrooms and communities to deliver justice to New Yorkers. Our direct representation of thousands of individuals every year informs our impact litigation efforts and policy advocacy—providing us with a powerful perspective from which to begin dismantling the systemic barriers that keep our clients from thriving." <i style="align-self:flex-end;">- The Legal Aid Society</i>
+                                    </p>
+                                    <div class="collapse multi-law" id="law2">
+                                        <div class="contact-type">
+                                            <strong>Phone:</strong>
+                                            <p>(212)-577-3300</p>
+                                        </div>
+                                        <div class="contact-type">
+                                            <strong>Addresses:</strong>
+                                            <a href="https://www.google.com/maps/search/the+legal+aid+society+inc/@40.7453833,-73.9050457,12z">Offices in all 5 boroughs</a>
+                                        </div>
+                                        <div class="contact-type">
+                                            <div><strong>Website:</strong> <a href="https://www.legalaidnyc.org/">legalaidnyc.org</a></div>
+                                        </div>
+                                    </div>
+                                <a href=".multi-law" class="btn btn-primary" data-toggle="collapse">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                         <div class="card">
+                                <img src="https://images.squarespace-cdn.com/content/573e0444b654f98766046721/1463682983545-3O4R5LT93MLEZZSTB5LX/TopLogo.png?content-type=image%2Fpng" style="padding:5%;" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">IMMIGRANT COMMUNITY LAW CENTER (ICLC)</h5>
+                                    <p class="card-text">
+                                        "Immigrant Community Law Center (ICLC) was founded by African Services Committee in 2012 to provide high-quality, affordable, and trustworthy immigration legal representation.  ICLC is staffed by a dedicated and culturally competent multi-lingual team of qualified attorneys, Department of Justice Accredited Representatives, and paralegals.  ICLC serves all immigrants of all backgrounds." <i style="align-self:flex-end;">- ICLC</i>
+                                    </p>
+                                    <div class="collapse multi-law" id="law3">
+                                        <div class="contact-type">
+                                            <strong>Phone:</strong>
+                                            <p>(212) 222-3882</p>
+                                        </div>
+                                        <div class="contact-type">
+                                            <strong>Addresses:</strong>
+                                            <a href="https://goo.gl/maps/XsWZEwTJhQ6hrWdr6">429 W 127th St f2, New York, NY 10027</a>
+                                        </div>
+                                        <div class="contact-type">
+                                            <div><strong>Website:</strong> <a href="http://immigrantcommunitylaw.org/">immigrantcommunitylaw.org</a></div>
+                                        </div>
+                                    </div>
+                                <a href=".multi-law" class="btn btn-primary" data-toggle="collapse">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#lawyers" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#lawyers" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <span class="carousel-title">ORGANIZATIONS</span>
+                <div id="orgs" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
+                    <ol class="carousel-indicators">
+                        <li data-target="#orgs" data-slide-to="0" class="active"></li>
+                        <li data-target="#orgs" data-slide-to="1"></li>
+                        <li data-target="#orgs" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="card">
+                                <img src="https://pbs.twimg.com/profile_images/1042522643373600768/leTVB5bm.jpg" style="padding:5%;" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">MAKE THE ROAD NY</h5>
+                                    <p class="card-text">
+                                        "We provide a full range of services to 17,000 people each year, including legal representation in immigration, housing, and worker exploitation cases. We teach English as a second language to 1,600 people annually, and have helped over 12,000 people gain US citizenship." <i style="align-self:flex-end;">- Make The Road NY</i>
+                                    </p>
+                                    <div class="collapse multi-org" id="org1">
+                                        <div class="contact-type">
+                                            <strong>Phone:</strong>
+                                            <p>(718) 418-7690</p>
+                                        </div>
+                                        <div class="contact-type">
+                                            <strong>Addresses:</strong>
+                                            <a href="https://goo.gl/maps/9KvnfniY1ez3Ktkb6">Brooklyn</a>
+                                            <a href="https://goo.gl/maps/k4wzZ6t5RDdS8F1n8">Queens</a>
+                                            <a href="https://goo.gl/maps/CMJfP6Q7CTuNYXjj7">Staten Island</a>
+                                            <a href="https://goo.gl/maps/K67x8oNC5tcvuQFR9">Long Island</a>
+                                            <a href="https://goo.gl/maps/WyV7ijHRtEhJQWaN9">Westchester</a>
+                                        </div>
+                                        <div class="contact-type">
+                                            <div><strong>Website:</strong> <a href="https://maketheroadny.org/contact/">maketheroadny.org</a></div>
+                                        </div>
+                                    </div>
+                                    <a href=".multi-org" class="btn btn-primary" data-toggle="collapse">Contact</a>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="carousel-item">
+                        <div class="card">
+                                <img src="https://aws.cause.clickandpledge.com/accounts/60175/connect/images/637136405452029386_NYIC_Logo_(1).png" style="padding:5%;" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">NEW YORK IMMIGRATION COALITION</h5>
+                                    <p class="card-text">
+                                        "The NYIC Immigration Advocacy (IA) team works closely with our Immigration Advocacy Collaborative to push for comprehensive immigration reform and to expand the rights of immigrant New Yorkers. We mobilize our members and allies to challenge lawmakers to create a fair New York, with opportunity and justice for all." <i style="align-self:flex-end;">- NYIC</i>
+                                    </p>
+                                    <div class="collapse multi-org" id="org2">
+                                        <div class="contact-type">
+                                            <strong>Phone:</strong>
+                                            <p>(212) 627-2227</p>
+                                        </div>
+                                        <div class="contact-type">
+                                            <strong>Addresses:</strong>
+                                            <a href="https://goo.gl/maps/vPZZKvVz9KKGfatb9">131 W 33rd Street, Ste 610, New York, NY 10001</a>
+                                        </div>
+                                        <div class="contact-type">
+                                            <div><strong>Website:</strong> <a href="https://www.nyic.org/">nyic.org</a></div>
+                                        </div>
+                                    </div>
+                                <a href=".multi-org" class="btn btn-primary" data-toggle="collapse">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                         <div class="card">
+                                <img src="https://www.guidestar.org/ViewEdoc.aspx?eDocId=5893169&approved=True" style="padding:5%;" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">BROOKLYN COMMUNITY FOUNDATION</h5>
+                                    <p class="card-text">
+                                        "We are committed to helping Brooklyn’s communities move from fear to strength, from trauma to healing, from division to wholeness, and from uncertainty to action. Brooklyn Community Foundation established the Immigrant Rights Fund in late 2016 in response to mounting uncertainty and fear within Brooklyn’s immigrant communities..." <i style="align-self:flex-end;">- Brooklyn Community Foundation</i>
+                                    </p>
+                                    <div class="collapse multi-org" id="org3">
+                                        <div class="contact-type">
+                                            <strong>Phone:</strong>
+                                            <p>(212) 222-3882</p>
+                                        </div>
+                                        <div class="contact-type">
+                                            <strong>Addresses:</strong>
+                                            <p>429 West 127th Street, New York, NY 10027</p>
+                                        </div>
+                                        <div class="contact-type">
+                                            <div><strong>Website:</strong> <a href="http://immigrantcommunitylaw.org/">immigrantcommunitylaw.org</a></div>
+                                        </div>
+                                    </div>
+                                <a href=".multi-org" class="btn btn-primary" data-toggle="collapse">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#orgs" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#orgs" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </section>
         </main>
         <footer>
             
