Filler text added

--- a/homepage.html
+++ b/homepage.html
@@ -26,8 +26,13 @@
         </header>
         <div class="container">
         <h1> Mission Statement</h1>
-        <p> We aim to create a website that will help 
-            the people in the Undocumented Community.</p>
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehender
+            it in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+            officia deserunt mollit anim id est laborum..</p>
             
         </div>
         <!--<div> for footer-->
