fixed page size

--- a/donationpage.html
+++ b/donationpage.html
@@ -16,13 +16,13 @@
                 <div class="block fixed round">DONATIONS</div>
             </div>
             <nav class="nav nav-pills">
-                <div class="nav-item"><a href="homepage.html" class="nav-link active">Home</a></div>
+                <div class="nav-item"><a href="homepage.html" class="nav-link">Home</a></div>
                 <div class="nav-item"><a href="resources.html" class="nav-link">Resources</a></div>
                 <div class="nav-item"><a href="history.html" class="nav-link">History</a></div>
-                <div class="nav-item"><a href="donationpage.html" class="nav-link">Donations</a></div>
+                <div class="nav-item"><a href="donationpage.html" class="nav-link active">Donations</a></div>
             </nav>
         </header>
-    <div style="background-image: url('https://indianamemberscreditunion.files.wordpress.com/2019/02/community-service_605300333.jpg');">
+    <div  class="background" style="background-image: url('https://indianamemberscreditunion.files.wordpress.com/2019/02/community-service_605300333.jpg');">
       <p class="text">In the IRS (Internal Revenue service)Data of the year 2015 shows that the <br>
       IRS collected 4.4 millions dollars of workers who did not have social security. <br>
       In The year 2015 the IRS collected 23.6 billion dollars. <br>
@@ -40,7 +40,7 @@
       
     </div>
        <div class="alert alert-info" role="alert">
-         Here is a page where you can donate <a href="https://secure.actblue.com/donate/nationalundocufund?refcode=info-page-link" class="alert-link">click here</a>.
+         Here is a page where you can donate <a href="https://secure.actblue.com/donate/nationalundocufund?refcode=info-page-link" class="alert-link" target="_blank">click here</a>.
        </div>
        
       <footer>
