added more content

--- a/history.html
+++ b/history.html
@@ -214,37 +214,21 @@
         <!--Stereotypes-->
         <h1> StereoTypes </h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehender
-            it in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-            officia deserunt mollit anim id est laborum.
+            Stereotypes are ideas or images that are fixed and often oversimplified. 
+            There are many stereotypes spread by media and politics surrounding the 
+            Undocumented community. Some of these Stereotypes have been around for 
+            decades while others were made by societal influences. Some new stereotypes that 
+            have been internalizd by the American public is that Immigrants are 
+            criminals. This is largely due to the political rhetoric the Trump adminstration
+            had been using. Many people also would suspect a latin@ or a middle 
+            easterner of being an immigrant. In reality, there is also a large amount of 
+            Europeans and Asians that are undocumented as well. Another thing that people have used to determine 
+            whether or not you may look undocumented is the job you have. If you are working as a gardener 
+            or nanny, you are more suspected of being undocumented. It is important to bring awareness to these 
+            stereotypes because there is a misconception of what the undocumented community actually looks like. 
+            If people have this misconception, there may be a lot of undocumented people looking for help 
+            but because they are white-passing they may not recieve the help they need.
         </p>
-        <ul>
-            <li>
-                id est laborum
-            </li>
-            <li>
-                id est laborum
-            </li>
-            <li>
-                id est laborum
-            </li>
-            <li>
-                id est laborum
-            </li>
-            <li>
-                id est laborum
-            </li>
-            <li>
-                id est laborum
-            </li>
-            <li>
-                id est laborum
-            </li>
-        </ul> 
         </div>
         <div>
         <!--Statistics-->
