Unification of style

--- a/resources.html
+++ b/resources.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="resources.css" type="text/css" />
+        <link rel="stylesheet" href="basic.css" type="text/css" />
         <link rel="stylesheet" href="https://unpkg.com/blocks.css/dist/blocks.min.css" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -22,8 +23,8 @@
         </header>
         <main>
          
-            <section class="resource-section">
-                <span class="carousel-title">LAWYERS</span>
+            <section class="resource-section mb-5">
+                <span class="carousel-title title">LAWYERS</span>
                 <!--MOBILE VIEW-->
                 <div id="lawyers" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
                     <ol class="carousel-indicators">
@@ -195,7 +196,7 @@
                         </div>
                     </div>
                 </article>
-                <span class="carousel-title">ORGANIZATIONS</span>
+                <span class="carousel-title title">ORGANIZATIONS</span>
                 <!--MOBILE VIEW-->
                 <div id="orgs" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
                     <ol class="carousel-indicators">
@@ -425,7 +426,14 @@
             </section>
         </main>
         <footer>
-            
+            <div class="footer-nav">
+                <a href="homepage.html" class="footer-link">Home</a>
+                <a href="resources.html" class="footer-link active">Resources</a>
+                <a href="history.html" class="footer-link">History</a>
+                <a href="donationpage.html" class="footer-link">Donate</a>
+            </div>
+            <div class="footer-banner">UNDOCKT</div>
+            <div class="footer-copyright"><i>&copy; JIS Shop, 2020</i></div>
         </footer>
     </body>
 </html>
