--- a/donationpage.html
+++ b/donationpage.html
@@ -3,6 +3,7 @@
     <head>
         <title>Donations</title>
         <link rel="stylesheet" href="donation.css" type="text/css" />
+        <link rel="stylesheet" href="basic.css" type="text/css" />
         <link rel="stylesheet" href="https://unpkg.com/blocks.css/dist/blocks.min.css" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -78,8 +79,15 @@
     </div>
    
       <footer>
-        copyright
-      </footer>
+            <div class="footer-nav">
+                <a href="homepage.html" class="footer-link">Home</a>
+                <a href="resources.html" class="footer-link active">Resources</a>
+                <a href="history.html" class="footer-link">History</a>
+                <a href="donationpage.html" class="footer-link">Donate</a>
+            </div>
+            <div class="footer-banner">UNDOCKT</div>
+            <div class="footer-copyright"><i>&copy; JIS Shop, 2020</i></div>
+        </footer>
       
     </body>
 </html>
