--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://unpkg.com/blocks.css/dist/blocks.min.css" />
         <!--Stylesheet for homepage-->
         <link rel="stylesheet" href="homepage.css" type="text/css" />
+        <link rel="stylesheet" href="basic.css" type="text/css" />
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -15,7 +16,7 @@
     <body>
        <header>
            <div class="title-banner">
-                <div class="block fixed round">Home</div>
+                <div class="block fixed round">UNDOCKT</div>
             </div>
             <nav class="nav nav-pills">
                 <div class="nav-item"><a href="homepage.html" class="nav-link active">Home</a></div>
@@ -25,7 +26,7 @@
             </nav>
         </header>
         <div class="ccontainer">
-            <h1> Mission Statement</h1>
+            <h1 class="title"> Mission Statement</h1>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
@@ -34,10 +35,10 @@
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
             officia deserunt mollit anim id est laborum..</p>
         </div>
-        <div class= "container">
+        <div class="container">
             <div class="col">
                 <!--Literal Definition-->
-                <h3> Literal Definition </h3>
+                <h3 class="title"> Literal Definition </h3>
                 <p>
                     An Undocumented Immigrant is a person who is foreign born and has
                     no legal right to be or remain in the United States. Some misconceptions 
@@ -49,7 +50,7 @@
             </div>
             <div class="col">
                 <!--Emotionally-->
-                 <h3> Emotional Baggage </h3>
+                 <h3 class="title"> Emotional Baggage </h3>
                 <p>
                     An Undocumented Immigrant is a person who is foreign born and has
                     no legal right to be or remain in the United States. Some misconceptions 
@@ -62,7 +63,7 @@
             </div>
             <div class="col">
                 <!--How does it affect everyday life-->
-                 <h3> Everyday Life... </h3>
+                 <h3 class="title"> Everyday Life... </h3>
                 <p>
                     An Undocumented Immigrant is a person who is foreign born and has
                     no legal right to be or remain in the United States. Some misconceptions 
@@ -73,9 +74,15 @@
                 </p>
             </div>
         </div>
-        <div>
-        <!--<div> for footer-->
-            
-        </div>
+        <footer>
+            <div class="footer-nav">
+                <a href="homepage.html" class="footer-link">Home</a>
+                <a href="resources.html" class="footer-link active">Resources</a>
+                <a href="history.html" class="footer-link">History</a>
+                <a href="donationpage.html" class="footer-link">Donate</a>
+            </div>
+            <div class="footer-banner">UNDOCKT</div>
+            <div class="footer-copyright"><i>&copy; JIS Shop, 2020</i></div>
+        </footer>
     </body>
 </html>
