--- a/donationpage.html
+++ b/donationpage.html
@@ -14,13 +14,13 @@
     <body>
         <header>
             <div class="title-banner">
-                <div class="block fixed round">DONATIONS</div>
+                <div class="block fixed round">DONATE</div>
             </div>
             <nav class="nav nav-pills">
                 <div class="nav-item"><a href="homepage.html" class="nav-link">Home</a></div>
                 <div class="nav-item"><a href="resources.html" class="nav-link">Resources</a></div>
                 <div class="nav-item"><a href="history.html" class="nav-link">History</a></div>
-                <div class="nav-item"><a href="donationpage.html" class="nav-link active">Donations</a></div>
+                <div class="nav-item"><a href="donationpage.html" class="nav-link active">Donate</a></div>
             </nav>
         </header>
     <div  class="background" style="background-image: url('https://indianamemberscreditunion.files.wordpress.com/2019/02/community-service_605300333.jpg');">
@@ -85,7 +85,7 @@
                 <a href="history.html" class="footer-link">History</a>
                 <a href="donationpage.html" class="footer-link">Donate</a>
             </div>
-            <div class="footer-banner">UNDOCKT</div>
+            <div class="footer-banner"><a href="homepage.html">UNDOCKT</a></div>
             <div class="footer-copyright"><i>&copy; JIS Shop, 2020</i></div>
         </footer>
       
