--- a/resources.html
+++ b/resources.html
@@ -432,7 +432,7 @@
                 <a href="history.html" class="footer-link">History</a>
                 <a href="donationpage.html" class="footer-link">Donate</a>
             </div>
-            <div class="footer-banner">UNDOCKT</div>
+            <div class="footer-banner"><a href="homepage.html">UNDOCKT</a></div>
             <div class="footer-copyright"><i>&copy; JIS Shop, 2020</i></div>
         </footer>
     </body>
