--- a/homepage.html
+++ b/homepage.html
@@ -26,7 +26,7 @@
             </nav>
         </header>
         <div class="ccontainer">
-            <h1 class="title"> Mission Statement</h1>
+            <h1 class="title"> MISSION STATEMENT</h1>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
@@ -81,7 +81,7 @@
                 <a href="history.html" class="footer-link">History</a>
                 <a href="donationpage.html" class="footer-link">Donate</a>
             </div>
-            <div class="footer-banner">UNDOCKT</div>
+            <div class="footer-banner"><a href="homepage.html">UNDOCKT</a></div>
             <div class="footer-copyright"><i>&copy; JIS Shop, 2020</i></div>
         </footer>
     </body>
