possible nav bar addoption

--- a/Homepage.html
+++ b/Homepage.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <link rel="javascript" href="File.js">
-    </head>
-    <body>
+ <head>
+    <link rel="stylesheet" href="index.css">
+    <title>Climate change</title>
+</head>
 
-<div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
+<body>
+    <header class="header">
+        <nav class="navbar">
+            <a href="#" class="nav-logo">Page Title</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#place-in-page-link-here" class="nav-link">What is climate change?</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">What our the causes?</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">why we need to act?</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Possible solution?</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+    </header>
+</body>
 
-<div style="padding-left:16px">
-  <h2>Responsive Topnav Example</h2>
-  <p>Resize the browser window to see how it works.</p>
-</div>
-
-    </body>
+<script src="File.js"></script>
 </html>
