Started CSS for Home page

--- a/index.html
+++ b/index.html
@@ -2,34 +2,44 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="topnav" id="myTopnav">
-        <a href="#hs-title"></a>
-        <a href="#why-it-matters">Why it matters</a>
-        <a href="#get-help">Get Help</a>
-        <a href="#reach-us">Reach Us</a>
-        <a href="#about-us">About Us</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
+
+    <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+            <div class="nav-title">
+                HOUSING SOLUTIONS
+            </div>
+        </div>
+        <div class="nav-btn">
+            <label for="nav-check">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+        </div>
+
+        <div class="nav-links">
+            <a href="why-it-matters.html" target="_blank">Why it matters</a>
+            <a href="get-help.html" target="_blank">Get Help</a>
+            <a href="reach-us.html" target="_blank">Reach Us</a>
+            <a href="about-us.html" target="_blank">About Us</a>
+        </div>
     </div>
 
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            }
-            else {
-                x.className = "topnav";
-            }
-        }
-    </script>
+    <div class="body-container">
+        <div>
+            <section class="section1">
+                <h2>How is housing insecurity affecting New Yorkers?</h2>
+            </section>
+        </div>
+    </div>
 
 </body>
 
