--- a/Homepage.html
+++ b/Homepage.html
@@ -30,6 +30,16 @@
             </div>
         </nav>
     </header>
+    <main>
+        <p>Here dooms day clock would go/ but would be hidden on moblie device</p>
+    </main>
+
+    <footer>
+        <div>
+            <a>home link</a>
+            <a>resorces</a>
+        </div>
+    </footer>
 </body>
 
 <script src="File.js"></script>
