Working on get-help html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <div>
             <section class="section1">
                 <h2>How is housing insecurity affecting New Yorkers?</h2>
+                <div class="card1">
+                    <p>Racially targeted policies and widespread discrimination have attributed to a long history of housing insecurity for Black/POC new yorkers.</p>
+                </div>
             </section>
         </div>
     </div>
