--- a/about-us.html
+++ b/about-us.html
@@ -2,9 +2,44 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+            <div class="nav-title">
+                Learn about us 
+            </div>
+        </div>
+        <div class="nav-btn">
+            <label for="nav-check">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+        </div>
+
+        <div class="nav-links">
+            <a href="why-it-matters.html" target="_blank">Why it matters</a>
+            <a href="get-help.html" target="_blank">Get Help</a>
+            <a href="reach-us.html" target="_blank">Reach Us</a>
+            <a href="about-us.html" target="_blank">About Us</a>
+        </div>
+    </div>
+
+    <div class="body-container">
+        <div>
+            <section class="section1">
+                
+            </section>
+        </div>
+    </div>
 
 </body>
 
