--- a/get-help.html
+++ b/get-help.html
@@ -14,7 +14,7 @@
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
             <div class="nav-title">
-                Get Help
+                Ways to get help:
             </div>
         </div>
         <div class="nav-btn">
