--- a/why-it-matters.html
+++ b/why-it-matters.html
@@ -2,10 +2,44 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="why-it-matters.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <!--Navbar-->
+    <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+            <div class="nav-title">
+                HOUSING SOLUTIONS
+            </div>
+        </div>
+        <div class="nav-btn">
+            <label for="nav-check">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+        </div>
 
+        <div class="nav-links">
+            <a href="why-it-matters.html" target="_blank">Why it matters</a>
+            <a href="get-help.html" target="_blank">Get Help</a>
+            <a href="reach-us.html" target="_blank">Reach Us</a>
+            <a href="about-us.html" target="_blank">About Us</a>
+        </div>
+    </div>
+    <!--Content-->
+    <h1 class="title">Why It Matters</h1>
+    <div class="border">
+        <div class="container">
+            <p class="item">Even before the initial pandemic, there were already 43,000 people living in family shelters in New York City in 2019, with about 25,000 of those people being children and teens.</p>
+        </div>
+    </div>
 </body>
 
 </html>
