--- a/get-help.html
+++ b/get-help.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="get-help.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
@@ -36,8 +37,30 @@
     <div class="body-container">
         <div>
             <section class="section1">
-                
+                <h2>Resources available to you:</h2>
             </section>
+            
+            <div class="res-list">
+                <section>
+                    <h6>DHS shelter</h6>
+                    <h6>Queer Housing NYC - Facebook group</h6>
+                    <h6>Black/POC Housing Share NYC - Facebook Group</h6>
+                    <h6>NYC Housing Connect</h6>
+                    <h6>NYCHA</h6>
+                    <h6>Homebase</h6>
+                    <h6>HRA Legal Assistance</h6>
+                    <h6>h6ving in Communities (h6NC) Rental Assistance Program</h6>
+                    <h6>CITYFEPS Rent Supplement Program</h6>
+                    <h6>SEPS Rent Supplement Program</h6>
+                    <h6>Pathway Home</h6>
+                    <h6>Section 8</h6>
+                    <h6>HUD-Veterans Administration Supportive Housing (VASH)</h6>
+                    <h6>Senior Housing</h6>
+                    <h6>Housing Services for Individuals with Serious Mental Illness</h6>
+                    <h6>Single Point of Access (SPOA)</h6>
+                    <h6>Center for Urban Community Services (CUCS)</h6>
+                </section>
+            </div>
         </div>
     </div>
 
