--- a/get-help.html
+++ b/get-help.html
@@ -28,7 +28,7 @@
 
         <div class="nav-links">
             <a href="why-it-matters.html" target="_blank">Why it matters</a>
-            <a href="get-help.html" target="_blank">Get Help</a>
+            <a href="index.html" target="_blank">Home</a>
             <a href="reach-us.html" target="_blank">Reach Us</a>
             <a href="about-us.html" target="_blank">About Us</a>
         </div>
