why-it-matters html & css changes

--- a/why-it-matters.html
+++ b/why-it-matters.html
@@ -35,11 +35,18 @@
     </div>
     <!--Content-->
     <h1 class="title">Why It Matters</h1>
-    <div class="border">
-        <div class="container">
-            <p class="item">Even before the initial pandemic, there were already 43,000 people living in family shelters in New York City in 2019, with about 25,000 of those people being children and teens.</p>
-        </div>
-    </div>
+    
+<!--    <div class="border">-->
+<!--        <div class="container">-->
+<!--            <p class="item">Even before the initial pandemic, there were already 43,000 people living in family shelters in New York City in 2019, with about 25,000 of those people being children and teens.</p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="border">-->
+<!--        <div class="container">-->
+<!--            <p class="item">According to campaigners, the number of public school children suffering housing instability has remained over 100,000 for the past five years, with nearly 111,000 kids experiencing homelessness for the 2019-2020 school year. As staggering as that number is, it represents a 2.2 percent drop from the previous year. Eighty-five percent of students facing homelessness were Black or Hispanic.-->
+<!--</p>-->
+<!--        </div>-->
+<!--    </div>-->
 </body>
 
 </html>
